# procstat-rs

./: Cargo.toml  README.md
src/: boot_time.rs  contexts.rs  cpu.rs  interrupts.rs  lib.rs  processes.rs  soft_irq.rs
tests/: lib.rs
tests/files/: stat.time.1  stat.time.2
